--- a/test/fixtures/blobs.yml
+++ b/test/fixtures/blobs.yml
@@ -1,4 +1,19 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: blobs
+#
+#  id          :integer          not null, primary key
+#  compression :string
+#  contents    :binary
+#  sha256      :string           not null
+#  size        :integer
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
+# Indexes
+#
+#  index_blobs_on_sha256  (sha256) UNIQUE
+#
 
 one:
   sha256: MyString
