--- a/test/fixtures/servers.yml
+++ b/test/fixtures/servers.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: servers
+#
+#  id         :integer          not null, primary key
+#  url        :string
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
+# Indexes
+#
+#  index_servers_on_url  (url) UNIQUE
+#
 
 one:
   url: MyString
