--- a/config/database.yml
+++ b/config/database.yml
@@ -13,21 +13,36 @@
 # idle_timeout should be set to zero, to avoid recycling sqlite connections
 # and losing the page cache
 #
-default: &default
+primary: &primary
   adapter: litedb
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   idle_timeout: 0
   metrics: false
 
+dump: &dump
+  adapter: postgresql
+  encoding: utf8
+  username: postgres
+  prepared_statements: false
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database_tasks: false
+
 development:
-  <<: *default
-  database: <%= Litesupport.root("development").join("data.sqlite3") %>
+  primary:
+    <<: *primary
+    database: <%= Litesupport.root("development").join("data.sqlite3") %>
+  dump:
+    <<: *dump
+    database: rubygems_production
+    host: localhost
+    username: segiddins
+    timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
+  <<: *primary
   database: <%= Litesupport.root("test").join("data.sqlite3") %>
 
 # Warning: Make sure your production database path is on a persistent
@@ -36,5 +51,5 @@ test:
 # You may also set the Litesupport.root in production via the
 # `LITESTACK_DATA_PATH` environment variable.
 production:
-  <<: *default
+  <<: *primary
   database: <%= Litesupport.root("production").join("data.sqlite3") %>
