--- a/config/dockerfile.yml
+++ b/config/dockerfile.yml
@@ -2,8 +2,6 @@
 
 ---
 options:
-  label:
-    fly_launch_runtime: rails
-  postgresql: true
-  prepare: false
-  redis: true
+cache: true
+parallel: true
+postgresql: true
