--- a/.dockerignore
+++ b/.dockerignore
@@ -35,3 +35,14 @@
 /app/assets/builds/*
 !/app/assets/builds/.keep
 /public/assets
+
+/go-gem-enumerate/
+/test/
+/zoekt-index-gem/
+
+/Dockerfile
+/docker-compose.yml
+/*.md
+/.dockerignore
+/.rubocop.yml
+/Caddyfile
