--- a/test/fixtures/gem_downloads.yml
+++ b/test/fixtures/gem_downloads.yml
@@ -1,4 +1,26 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: gem_downloads
+#
+#  id         :bigint           not null, primary key
+#  as_of      :datetime
+#  count      :bigint
+#  rubygem_id :bigint           not null
+#  server_id  :bigint           not null
+#  version_id :bigint           not null
+#
+# Indexes
+#
+#  index_gem_downloads_on_rubygem_id  (rubygem_id)
+#  index_gem_downloads_on_server_id   (server_id)
+#  index_gem_downloads_on_version_id  (version_id)
+#
+# Foreign Keys
+#
+#  fk_rails_...  (rubygem_id => rubygems.id)
+#  fk_rails_...  (server_id => servers.id)
+#  fk_rails_...  (version_id => versions.id)
+#
 
 one:
   rubygem: one
