--- a/k8s/app.yaml
+++ b/k8s/app.yaml
@@ -25,6 +25,7 @@ spec:
       containers:
         - name: rubygems-research
           image: ghcr.io/segiddins/rubygems-research:main
+          imagePullPolicy: Always
           command:
             [
               "bundle",
@@ -148,10 +149,11 @@ metadata:
   annotations:
     shipit.shopify.io/restart: "true"
 spec:
+  replicas: 2
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxSurge: 50%
+      maxSurge: 100%
       maxUnavailable: 50%
   selector:
     matchLabels:
@@ -168,6 +170,7 @@ spec:
         - name: good-job
           image: ghcr.io/segiddins/rubygems-research:main
           args: ["bundle", "exec", "good_job", "start"]
+          imagePullPolicy: Always
           resources:
             requests:
               cpu: 500m
@@ -195,6 +198,8 @@ spec:
               value: production
             - name: RAILS_LOG_TO_STDOUT
               value: "true"
+            - name: GOOD_JOB_PROBE_PORT
+              value: "7001"
             - name: RAILS_MAX_THREADS
               value: "5"
             - name: DD_AGENT_HOST
