--- a/k8s/app.yaml
+++ b/k8s/app.yaml
@@ -97,6 +97,8 @@ metadata:
   name: app
   labels:
     name: app
+  annotations:
+    tailscale.com/expose: "true"
 spec:
   ports:
     - port: 8080
