--- a/k8s/app.yaml
+++ b/k8s/app.yaml
@@ -39,6 +39,8 @@ spec:
           env:
             - name: RAILS_ENV
               value: production
+            - name: ENV
+              value: production
             - name: RAILS_LOG_TO_STDOUT
               value: "true"
             - name: RAILS_MAX_THREADS
@@ -208,6 +210,8 @@ spec:
           env:
             - name: RAILS_ENV
               value: production
+            - name: ENV
+              value: production
             - name: RAILS_LOG_TO_STDOUT
               value: "true"
             - name: GOOD_JOB_PROBE_PORT
@@ -226,6 +230,8 @@ spec:
                 fieldRef:
                   apiVersion: v1
                   fieldPath: status.hostIP
+            - name: STATSD_ADDR
+              value: $(STATSD_HOST):8125
             - name: DATABASE_URL
               value: postgresql://postgres:iZLNkfG3P1@rubygems-research-db-postgresql.rubygems-research-production.svc.cluster.local:5432/rubygems_research_production
             - name: DUMP_DATABASE_URL
