--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -49,6 +49,8 @@ jobs:
           labels: ${{ steps.meta-app.outputs.labels }}
           build-args: |
             APP_VERSION=${{ github.sha }}
+            DD_GIT_REPOSITORY_URL=https://github.com/${{ github.repository }}
+            DD_GIT_COMMIT_SHA=${{ github.sha }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
